src/objects/NO_Gross_Rate_Loading__c.object
<CustomObject>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Rate__c</fullName>
        <label>Gross Rate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>NO Gross Rate Loading</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NO Gross Rate Loading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NO Gross Rate Loadings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>